# rustj

./: Cargo.toml
docs/research/: c1-c2-faithful-port.md  forge-support.md  g1-faithful-port.md  jni-architecture.md
docs/specs/: 2026-06-20-interpreter-design.md  2026-06-20-object-model-design.md  2026-06-20-virtual-dispatch-design.md  2026-06-21-arrays-design.md  2026-06-21-control-flow-design.md  2026-06-21-multianewarray-design.md  2026-06-21-throw-exception-design.md  2026-06-27-exception-unification-design.md  2026-06-28-ldc-string-pool-design.md  2026-06-29-class-oop-getprimitiveclass-design.md  2026-06-30-arraycopy-faithful-messages-design.md  (+15 more)
src/: lib.rs  main.rs
src/bytecode/: mod.rs  (+1 more)
tests/: _feature_probe.rs  areturn.rs  array_store_ase.rs  arraylist_end_to_end.rs  arrays.rs  bmh_clinit_probe.rs  checkcast.rs  class_mirror.rs  class_real_bytecode.rs  classloader_load_class.rs  clinit.rs  control_flow.rs  dup_stack_ops.rs  filesystem_attributes.rs  filesystem_canonicalize.rs  g0_reflection_classfile_probe.rs  hashmap_end_to_end.rs  indy_concat.rs  int_string_round_trip.rs  interface_dispatch.rs  interpret_int_methods.rs  interpret_method_invocation.rs  javabase_full_load.rs  lambda_end_to_end.rs  method_handle_lf_invoke.rs  method_ref_end_to_end.rs  module_get_module.rs  module_info_parse.rs  module_layer_boot.rs  multi_arg_invoke.rs  multianewarray.rs  native_real_object.rs  object_fields.rs  object_wait_notify.rs  parse_real_class.rs  real_integer.rs  real_string_ops.rs  reflection_declared.rs  reflection_field_getset.rs  reflection_field_invoke.rs  (+25 more)
(+106 files in other folders)
